internal/xds/translator/testdata/out/xds-ir/http-route-weighted-zones.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: route-with-weighted-zones-roundrobin
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: route-with-weighted-zones-roundrobin-dest/backend/0
            weight: 1
    - match:
        prefix: /
      name: route-with-weighted-zones-maglev
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        hashPolicy:
        - connectionProperties:
            sourceIp: true
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: route-with-weighted-zones-maglev-dest/backend/0
            weight: 1
          useHashPolicy: true
    - match:
        prefix: /
      name: route-with-weighted-zones-backend-utilization
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: route-with-weighted-zones-backend-utilization-dest/backend/0
            weight: 1
